Changed the hourly rate and removed hot stone massage. Also added description about Audrey

--- a/index.html
+++ b/index.html
@@ -43,22 +43,17 @@
         <div class="service-card">
           <h3>Swedish Massage</h3>
           <p>Relaxing massage that helps reduce stress and improve circulation</p>
-          <span class="price">$80/hr</span>
+          <span class="price">$120/hr or $175/1.5hr</span>
         </div>
         <div class="service-card">
           <h3>Deep Tissue</h3>
           <p>Targets deep muscle tension and chronic pain areas</p>
-          <span class="price">$90/hr</span>
+          <span class="price">$120/hr or $175/1.5hr</span>
         </div>
         <div class="service-card">
           <h3>Sports Massage</h3>
           <p>Perfect for athletes and active individuals</p>
-          <span class="price">$95/hr</span>
-        </div>
-        <div class="service-card">
-          <h3>Hot Stone</h3>
-          <p>Combines heated stones with relaxing massage techniques</p>
-          <span class="price">$100/hr</span>
+          <span class="price">$120/hr or $175/1.5hr</span>
         </div>
       </div>
     </div>
